--- a/splitdine2_flutter/.gitignore
+++ b/splitdine2_flutter/.gitignore
@@ -33,7 +33,6 @@ ios/
 android/
 
 # Generated plugin files
-lib/generated_plugin_registrant.dart
 **/GeneratedPluginRegistrant.*
 **/generated_plugin_registrant.*
 **/generated_plugins.cmake
@@ -65,7 +64,7 @@ Desktop.ini
 $RECYCLE_BIN/
 
 # Test files (uncomment if you want to exclude tests)
-# test/
+test/
 
 # Coverage
 coverage/
