--- a/splitdine2_flutter/pubspec.yaml
+++ b/splitdine2_flutter/pubspec.yaml
@@ -35,19 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  # Firebase Core
-  firebase_core: ^2.24.2
-
-  # Firebase Services
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.6.0
+  # HTTP client for API communication
+  http: ^1.1.2
 
   # State Management
   provider: ^6.1.1
 
   # Additional packages for later phases
-  # http: ^1.1.2
   # image_picker: ^1.0.7
   # qr_flutter: ^4.1.0
   # qr_code_scanner: ^1.0.1
