--- a/splitdine2_flutter/pubspec.yaml
+++ b/splitdine2_flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   # State Management
   provider: ^6.1.1
+  shared_preferences: ^2.5.3
 
   # Additional packages for later phases
   # image_picker: ^1.0.7
